--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,7 @@ name: Terraform Deploy
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
 
 permissions:
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: Terraform
     runs-on: ubuntu-latest
     environment: dev
 
@@ -20,54 +20,42 @@ jobs:
         shell: bash
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v4
-      with:
-        role-to-assume: arn:aws:iam::112367725894:role/GitHub-Terraform-Role
-        aws-region: ap-south-1
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::112367725894:role/GitHub-Terraform-Role
+          aws-region: ap-south-1
 
-    - name: Fetch AWS Keys from Secrets Manager
-      id: get-secret
-      run: |
-        SECRET=$(aws secretsmanager get-secret-value \
-          --secret-id terraform/github/credentials \
-          --query SecretString \
-          --output text)
-        echo "$SECRET" > secret.json
-        echo "AWS_ACCESS_KEY_ID=$(jq -r .AWS_ACCESS_KEY_ID secret.json)" >> $GITHUB_ENV
-        echo "AWS_SECRET_ACCESS_KEY=$(jq -r .AWS_SECRET_ACCESS_KEY secret.json)" >> $GITHUB_ENV
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: latest
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: latest
+      - name: Terraform Init
+        run: terraform init
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Terraform Format
+        run: terraform fmt -check
 
-    - name: Terraform Format
-      run: terraform fmt -check
+      - name: Terraform Plan
+        run: terraform plan -input=false
 
-    - name: Terraform Plan
-      run: terraform plan -input=false
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve -input=false
 
-    - name: Terraform Apply
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+      - name: Export Private Key to File
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          terraform output -raw private_key > private_key.pem
+          chmod 600 private_key.pem
 
-    - name: Capture private key from Terraform
-      id: tf
-      run: |
-      echo "PRIVATE_KEY=$(terraform output -raw private_key)" >> $GITHUB_ENV
-
-    - name: Save private key artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: ec2-private-key
-        path: private_key.pem
-      run: |
-        echo "$PRIVATE_KEY" > private_key.pem
-        chmod 600 private_key.pem
+      - name: Upload Private Key Artifact
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        uses: actions/upload-artifact@v3
+        with:
+          name: ec2-private-key
+          path: private_key.pem
