Adding working directory for terraform

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -35,15 +35,19 @@ jobs:
           terraform_version: latest
 
       - name: Terraform Init
+        working-directory: bootstrap
         run: terraform init
 
       - name: Terraform Format
+        working-directory: bootstrap
         run: terraform fmt -check
 
       - name: Terraform Plan
+        working-directory: bootstrap
         run: terraform plan -input=false
 
       - name: Terraform Apply
+        working-directory: bootstrap
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
 
