--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,12 +44,12 @@ jobs:
 
       - name: Terraform Plan
         working-directory: bootstrap
-        run: terraform plan -input=false
+        run: terraform plan -var-file=../bootstrap/terraform.tfvars -input=false
 
       - name: Terraform Apply
         working-directory: bootstrap
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
+        run: terraform apply -var-file=../bootstrap/terraform.tfvars -auto-approve -input=false
 
       - name: Export Private Key to File
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
